# AdvancedCpp

./: CMakeLists.txt  README.md
ZaawansowanyCpp/: CMakeLists.txt  ZaawansowanyCpp.cpp
ZaawansowanyCpp/Lista1/: Zadanie1_1.h  Zadanie1_2.h  Zadanie1_3.h
ZaawansowanyCpp/Lista2/: Zadanie2_1.h  Zadanie2_2.h  Zadanie2_3.h
ZaawansowanyCpp/Lista3/: Forward_list_new_idx.h  Forward_list_new_key.h  Forward_list_old.h  Zadanie3_1.h  Zadanie3_2.h  Zadanie3_3.h
ZaawansowanyCpp/Lista4/: Zadanie4_1.h  Zadanie4_2.h
ZaawansowanyCpp/Lista5/: Zadanie5_1.h  Zadanie5_2.h  Zadanie5_3.h
ZaawansowanyCpp/SourceFiles/: Zadanie5_1.cpp  Zadanie5_2.cpp  Zadanie5_3.cpp
